syntax = "proto3";

option java_multiple_files = true;

option java_package = "billing";

service BillingService {
  rpc CreateBilling (BillingRequest) returns (BillingResponse);
  rpc GetBillsById (GetBillsByIdRequest) returns (BillingResponseList);
  rpc DeteleBillById (DeleteBillByIdRequest) returns (DeleteBillResponse);
}

message BillingRequest {
  string customerId = 1;
  string amount = 2;
}

message BillingResponse {
  string id = 1;
  string issueDate = 2;
  string dueDate = 3;
  string status =4;
  string amount = 5;
}

message GetBillsByIdRequest {
  string customerId = 1;
}

message BillingResponseList {
  repeated BillingResponse bills = 1;
}

message DeleteBillByIdRequest {
  string Id = 1;
}

message DeleteBillResponse {
  string message = 1;
  bool status = 2;
}
